# VTFEdit-Plus

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
VTFCmd/: CMakeLists.txt  image_io.c  image_io.h  stdafx.h  vtfcmd.c
VTFEdit/: About.h  BatchConvert.h  BatchConvertDialog.h  BatchConvertRunDialog.cpp  BatchConvertRunDialog.h  CMakeLists.txt  CreateVmtDialog.h  CreateVtfDialog.cpp  CreateVtfDialog.h  MainWindow.h  OptionsDialog.cpp  QtUtil.h  ResourceHexDialog.cpp  ResourceHexDialog.h  VTFEdit.h  VTFEdit.rc  VTFEdit.resX  VTFOptions.h  VmtHighlighter.cpp  VmtHighlighter.h  VtfFlagsDialog.cpp  VtfResourcesDialog.cpp  VtfSheet.cpp  WadConvertDialog.cpp  WadFile.h
VTFEditQt/: BatchConvertDialog.cpp  BatchConvertRunDialog.cpp  CreateVmtDialog.cpp  CreateVtfDialog.cpp  MainWindow.cpp  MainWindow.h  OptionsDialog.cpp  OptionsDialog.h  QtUtil.cpp  ResourceHexDialog.cpp  VtfFlagsDialog.h  VtfPropertiesDialog.cpp  VtfPropertiesDialog.h  VtfResourcesDialog.h  VtfSheet.h  VtfSheetDialog.cpp  VtfSheetDialog.h  WadConvertDialog.cpp  WadConvertDialog.h  WadFile.cpp  WindowsVtfFormats.h  main.cpp
VTFLib/: CMakeLists.txt  Error.cpp  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  Proc.cpp  VMTIntegerNode.cpp  VMTSingleNode.cpp  VTFFile.cpp  VTFFile.h  VTFFormat.h  VTFLib.cpp  VTFWrapper.cpp  VTFWrapper.h  stdafx.h
docs/: parity.md
legacy/: README.md
legacy/VTFEdit-WinForms/: About.h  About.resX  VMTCreate.h  VMTFileUtility.h  VTFEdit.cpp  VTFEdit.rc  VTFEdit.resX  VTFFileUtility.h  VTFOptions.resx  VTFResources.cpp  VTFResources.h  VTFResources.resx  WADConvert.h  stdafx.h
legacy/sln/vs2019/VTFCmd/: VTFCmd.vcxproj  VTFCmd.vcxproj.filters
legacy/sln/vs2019/VTFEdit/: VTFEdit.vcxproj  VTFEdit.vcxproj.filters  packages.config
legacy/sln/vs2019/VTFLib/: VTFLib.vcxproj  VTFLib.vcxproj.filters
lib/: VTFLib.h
lib/linux/: README.md
sln/vs2019/VTFCmd/: packages.config
sln/vs2019/VTFEdit/: VTFEdit.vcxproj  VTFEdit.vcxproj.filters  packages.config
sln/vs2019/VTFLib/: VTFLib.vcxproj
